finish the dashboard

--- a/index.html
+++ b/index.html
@@ -300,16 +300,66 @@
                     <td>Oct 30th 2019</td>
                     <td>
                       <a href="details.html" class="btn btn-secondary"><i class="fas fa-angle-double-right"></i>Details</a>
+                    </td>                    
+                  </tr>
+                  <tr>
+                    <td>6</td>
+                    <td>Nokia is back?</td>
+                    <td>Tech</td>
+                    <td>May 10th 2019</td>
+                    <td>
+                      <a href="details.html" class="btn btn-secondary"><i class="fas fa-angle-double-right"></i>Details</a>
                     </td>
                   </tr>
                 </tbody>
               </table>
             </div>
           </div>
-          <div class="col-md-3"></div>
+          <div class="col-md-3">
+            <div class="card text-center bg-primary text-white mb-3">
+              <div class="card-body">
+                <h3>Posts</h3>
+                <h4 class="display-4">
+                  <i class="fas fa-pencil-alt"></i> 6
+                </h4>
+                <a href="posts.html" class="btn btn-outline-light btn-sm">View</a>
+              </div>
+            </div>
+            <div class="card text-center bg-success text-white mb-3">
+              <div class="card-body">
+                <h3>Categories</h3>
+                <h4 class="display-4">
+                  <i class="fas fa-folder"></i> 4
+                </h4>
+                <a href="categories.html" class="btn btn-outline-light btn-sm">View</a>
+              </div>
+            </div>
+            <div class="card text-center bg-warning text-white mb-3">
+              <div class="card-body">
+                <h3>Users</h3>
+                <h4 class="display-4">
+                  <i class="fas fa-users"></i> 7
+                </h4>
+                <a href="users.html" class="btn btn-outline-light btn-sm">View</a>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
+
+    <!-- Footer -->
+    <footer id="mainFooter" class="bg-dark text-white mt-5 p-5">
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <p class="lead text-center">
+              Copyright &copy; <span id="year"></span> ChakBlog
+            </p>
+          </div>
+        </div>
+      </div>
+    </footer>
 		<script
 			src="http://code.jquery.com/jquery-3.3.1.min.js"
 			integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
