--- a/categories.html
+++ b/categories.html
@@ -84,7 +84,7 @@
 			</div>
 		</header>
 		<!-- Search -->
-		<section id="actions" class="py-4 mb-4 bg-light">
+		<section id="search" class="py-4 mb-4 bg-light">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-6 ml-auto">
